--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -11,11 +11,10 @@
   background-color: var.$color-orange;
 }
 
-
 .logo {
   display: flex;
   justify-content: center;
-  width: 50%;
+  width: 80%;
   color: var.$color-white;
 
   &:hover {
@@ -46,4 +45,10 @@
 
 .active {
   color: var.$color-black;
+}
+
+@media (min-width: 768px) {
+  .logo {
+    width: 50%;
+  }
 }
